[gd_scene load_steps=17 format=2]

[ext_resource path="res://interface/comboList.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/bar-chunk-icon.png" type="Texture" id=2]
[ext_resource path="res://assets/interfaces/on-hit-cancel-icon.png" type="Texture" id=3]
[ext_resource path="res://assets/interfaces/loading-screen/prof-desc-bgd-border.png" type="Texture" id=4]
[ext_resource path="res://assets/interfaces/loading-screen/prof-desc-bgd.png" type="Texture" id=5]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=6]
[ext_resource path="res://interface/cursor.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/interfaces/command-input/up.png" type="Texture" id=8]
[ext_resource path="res://assets/interfaces/command-input/down.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="comboList" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )
scrollSpeed = 1000
abilityBarChunkTexture = ExtResource( 2 )
onHitCancelableTexture = ExtResource( 3 )

[node name="bgd2" type="Control" parent="."]
margin_left = 35.0
margin_top = 2.0
margin_right = 75.0
margin_bottom = 42.0

[node name="TextureRect2" type="TextureRect" parent="bgd2"]
margin_left = -71.6667
margin_right = 132.333
margin_bottom = 204.0
rect_scale = Vector2( 4.2, 5 )
texture = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="bgd2"]
modulate = Color( 0.113725, 0.733333, 1, 1 )
margin_left = -53.936
margin_top = 76.9264
margin_right = 116.064
margin_bottom = 246.926
rect_scale = Vector2( 4.8, 5.2 )
texture = ExtResource( 5 )

[node name="templateLabel" type="Label" parent="."]
visible = false
margin_top = 1.0
margin_right = 84.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "filler"

[node name="commandNameLabel" type="Label" parent="."]
visible = false
margin_top = 1.0
margin_right = 84.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "filler"

[node name="title" type="Label" parent="."]
margin_left = 10.2078
margin_top = 26.0565
margin_right = 562.208
margin_bottom = 79.0565
custom_fonts/font = SubResource( 3 )
text = "Command List and Combo Information"

[node name="rowTemplateLabel" type="Label" parent="."]
visible = false
margin_top = 1.0
margin_right = 84.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "filler"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 88.0
margin_right = 1120.0
margin_bottom = 1175.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
columns = 4

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 88 )
z_index = -1

[node name="trainignHUDBgd" type="TextureRect" parent="Node2D"]
margin_right = 795.0
margin_bottom = 898.0
texture = SubResource( 6 )
expand = true

[node name="navigation" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="cursor" parent="navigation" instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, 0 )
rotation = 3.14159
scale = Vector2( 1.2, 1.2 )
offset = Vector2( 75, -25 )

[node name="arrows" type="Control" parent="navigation"]
margin_left = 750.0
margin_right = 790.0
margin_bottom = 40.0

[node name="up-texture" type="TextureRect" parent="navigation/arrows"]
margin_left = -169.294
margin_top = 120.29
margin_right = -84.294
margin_bottom = 160.29
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )

[node name="down-texture" type="TextureRect" parent="navigation/arrows"]
margin_left = -169.294
margin_top = 712.259
margin_right = -84.294
margin_bottom = 752.259
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="CmdDetailsBgd" type="Control" parent="."]
margin_left = -3.33336
margin_top = 851.001
margin_right = 36.6666
margin_bottom = 891.001

[node name="TextureRect2" type="TextureRect" parent="CmdDetailsBgd"]
modulate = Color( 0.509804, 0.0509804, 0.0588235, 1 )
margin_left = -20.0
margin_right = 184.0
margin_bottom = 204.0
rect_scale = Vector2( 4, 0.7 )
texture = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="CmdDetailsBgd"]
modulate = Color( 0.847059, 0.298039, 0.94902, 1 )
margin_left = -2.936
margin_top = 45.9263
margin_right = 167.064
margin_bottom = 215.926
rect_scale = Vector2( 4.5, 0.5 )
texture = ExtResource( 5 )

[node name="CommandDetails" type="Control" parent="."]
margin_left = -3.33333
margin_right = 36.6667
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CommandDetails"]
margin_left = 30.6934
margin_top = 853.278
margin_right = 400.693
margin_bottom = 893.278

[node name="cmdName" type="Label" parent="CommandDetails/HBoxContainer"]
margin_top = 2.0
margin_right = 225.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "Command Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="CommandDetails"]
margin_left = 35.0
margin_top = 903.0
margin_right = 765.0
margin_bottom = 973.0

[node name="cmdDetails" type="Label" parent="CommandDetails/HBoxContainer2"]
margin_right = 700.0
margin_bottom = 75.0
rect_min_size = Vector2( 700, 75 )
custom_fonts/font = SubResource( 7 )
text = "Command properties"
autowrap = true

[node name="cursor-template" parent="." instance=ExtResource( 7 )]
visible = false
scale = Vector2( 0.8, 0.8 )
offset = Vector2( 300, 30 )
